# Kinesis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
docs/circle/: learning.md
results/circle/: ablation.md
scripts/: README.md  ablate.py  eval.py  find_home_pose.py  play.py  plot_curves.py  train.py
scripts/tools/: ablate.py  find_home_pose.py  plot_curves.py  render_views.py
src/kinesis/configs/: circle.yaml  default.yaml  figure8_3d.yaml
src/kinesis/configs/naive/: circle.yaml  figure8_3d.yaml  viviani.yaml  viviani_4m.yaml  viviani_slow.yaml  viviani_v2.yaml
src/kinesis/configs/residual/: circle_residual.yaml  circle_residual_orient.yaml  figure8_3d_residual.yaml  viviani_residual.yaml  viviani_residual_orient.yaml  viviani_residual_pink.yaml
src/kinesis/envs/: factory.py  panda_track.py  wrappers.py
src/kinesis/orientation/: __init__.py  common.py  so3.py
src/kinesis/trajectories/: __init__.py  base.py  circle.py  figure8_3d.py  viviani.py
src/kinesis/utils/: trajectory.py
tests/: test_env.py  test_smoke.py  test_so3.py  test_trajectory.py  test_wrappers.py
