[project]
name = "kinesis"
version = "0.1.0"
description = "Reinforcement-learning-based end-effector trajectory tracking for the Franka Emika Panda."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Harrish Hayyanar" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "mujoco>=3.2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.3",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "tensorboard>=2.16",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7"]

[project.urls]
Repository = "https://github.com/Harrishayy/Kinesis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinesis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
